0.8.0: (Future)
Features:
 - Improved logging configuration
 - One-Player BattleChip/Progress/Beast Link Gate support
 - Add Game Boy Color palettes for original Game Boy games
 - Debugger: Add unary operators and memory dereferencing
Emulation fixes:
 - GBA: All IRQs have 7 cycle delay (fixes mgba.io/i/539, mgba.io/i/1208)
 - GBA: Reset now reloads multiboot ROMs
 - GBA BIOS: Fix multiboot entry point (fixes Magic Floor)
 - GB Video: Delay LYC STAT check (fixes mgba.io/i/1331)
 - GB Video: Fix window being enabled mid-scanline (fixes mgba.io/i/1328)
 - GB I/O: Filter IE top bits properly (fixes mgba.io/i/1329)
Other fixes:
 - Qt: More app metadata fixes
 - Qt: Fix load recent from archive (fixes mgba.io/i/1325)
 - LR35902: Fix disassembly of several CB-prefix instructions
Misc:
 - GBA Savedata: EEPROM performance fixes
 - GBA Savedata: Automatically map 1Mbit Flash files as 1Mbit Flash
 - GB Memory: Support running from blocked memory
 - Qt: Don't unload ROM immediately if it crashes
 - Debugger: Add breakpoint and watchpoint listing
 - Qt: Add missing HEVC NVENC option (fixes mgba.io/i/1323)
 - LR35902: Support PC-relative opcode decoding

0.7.1: (2019-02-24)
Bugfixes:
 - 3DS: Work around menu freezing (fixes mgba.io/i/1294)
 - GB: Fix crash when accessing SRAM if no save loaded and cartridge has no SRAM
 - GB Serialize: Fix loading states with negative pixel x (fixes mgba.io/i/1293)
 - GB, GBA Serialize: Fix loading two states in a row
 - GBA: Fix video timing when skipping BIOS (fixes mgba.io/i/1318)
 - GBA DMA: Fix Display Start DMAs
 - GBA DMA: Fix DMA start/end timing
 - GBA DMA: Fix invalid DMA handling (fixes mgba.io/i/1301)
 - GBA Memory: Fix a few AGBPrint crashes
 - GBA Memory: Fix OOB ROM reads showing up as AGBPrint memory
 - GBA SIO: Prevent writing read-only multiplayer bits
 - GBA Video: Fix enabling layers in non-tile modes (fixes mgba.io/i/1317)
 - Python: Fix crash when deleting files owned by library