@@ -4,6 +4,7 @@ Features:
  - One-Player BattleChip/Progress/Beast Link Gate support
  - Add Game Boy Color palettes for original Game Boy games
  - Debugger: Add unary operators and memory dereferencing
+ - GB: Expose platform information to CLI debugger
 Emulation fixes:
  - GBA: All IRQs have 7 cycle delay (fixes mgba.io/i/539, mgba.io/i/1208)
  - GBA: Reset now reloads multiboot ROMs
